[gd_scene load_steps=8 format=2]

[ext_resource path="res://UserInterface/Fonts/Ubuntu-M.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://UserInterface/HUD.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 37
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 31
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=5]
default_font = SubResource( 4 )

[sub_resource type="Theme" id=3]

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="AmmoDisplay" type="RichTextLabel" parent="."]
self_modulate = Color( 0, 0, 0, 1 )
anchor_left = 1.0
anchor_right = 1.0
margin_left = -251.0
margin_top = 12.0
margin_right = -28.0
margin_bottom = 64.0
theme = SubResource( 2 )
text = "Candy Corn"

[node name="HeathPackDisplay" type="RichTextLabel" parent="."]
self_modulate = Color( 0, 0, 0, 1 )
anchor_left = 1.0
anchor_right = 1.0
margin_left = -1577.0
margin_top = 8.0
margin_right = -1354.0
margin_bottom = 60.0
theme = SubResource( 5 )
text = "Candy:"

[node name="HealthBar" type="ProgressBar" parent="."]
margin_right = 390.0
margin_bottom = 54.0
theme = SubResource( 3 )
